--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
-version: '3.1'
+version: '3.6'
 
 services:
   db:
-    image: mysql
-    restart: always
+    image: mysql/mysql-server
     ports:
       - "3307:3306"
     environment:
@@ -13,12 +12,16 @@ services:
       MYSQL_ROOT_PASSWORD: 12345
 
   app:
-    image: filmslibrary
+    image: films_library
     depends_on:
       - db
     ports:
       - "8081:8081"
     environment:
-#      MY_SQL_HOST: db
-#      MY_SQL_PORT: 3307
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3307/filmslibrarydb?autoReconnect=true&useSSL=false
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_DATABASE: filmslibrarydb
+      DB_USERNAME: mysql
+      DB_PASSWORD: mysql
+      JAR_NAME: FilmsLibrary-1
+      WAIT_HOSTS: db:3306
