--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port = 8081
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://${MY_SQL_HOST:localhost}:${MY_SQL_PORT:3307}/filmslibrarydb?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=mysql
-spring.datasource.password=mysql
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3307}/${DB_DATABASE:filmslibrarydb}?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=${DB_USERNAME:mysql}
+spring.datasource.password=${DB_PASSWORD:mysql}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
